--- a/index.html
+++ b/index.html
@@ -6,14 +6,8 @@
     <title>Pass-73336-Cohort-21</title>
 </head>
 <body>
-    <h1>Welcome to Skyline ICT consult LTD. 
-        This is my first Project in Reprository</h1>
 
-        <p>For all of us who are previlage to be alive and healthy
-            Our role is not to do small things and to solve small problems.
-            The only way we can justify our previlage is by solving 
-            the world's bigest problem and doing hard things.
-        </p>
+    <h1>Obidient Tech space founder: Olisa Macaulay Skyline</h1>
     
 </body>
 </html>
